# resctl-demo

./: .gitignore  .packit.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build-and-tar.sh  install.sh
.github/workflows/: build-test.yaml  ci.yaml  lambda.yaml
misc/: iocost_coef_gen.py  sideloader.py
rd-agent/: Cargo.toml  README.md
rd-agent-intf/: Cargo.toml  README.md
rd-agent-intf/src/: args.rs  bandit_report.rs  bench.rs  cmd.rs  cmd_ack.rs  index.rs  lib.rs  oomd.rs  report.rs  side_defs.rs  slices.rs  sysreqs.rs
rd-agent/src/: bandit.rs  bench.rs  cmd.rs  hashd.rs  main.rs  misc.rs  oomd.rs  report.rs  side.rs  sideloader.rs  slices.rs
rd-agent/src/bandit/: mem_hog.rs
rd-agent/src/misc/: biolatpcts.py  biolatpcts_wrapper.sh  io_latencies.py  io_latencies_wrapper.sh  iocost_coef_gen.py  iocost_monitor.py  sideloader.py
rd-agent/src/side/: build-linux.sh  burn-cpus.sh  dlxu-memory-growth.py  inodesteal-test.py  mem-hog.sh  memory-balloon.py  memory-growth.py  read-bomb.py  tar-bomb.sh
rd-hashd/: Cargo.toml  README.md
rd-hashd-intf/: Cargo.toml  README.md
rd-hashd-intf/src/: args.rs  lib.rs  params.rs  report.rs
rd-hashd/src/: bench.rs  hasher.rs  logger.rs  main.rs  testfiles.rs  workqueue.rs
rd-util/: Cargo.toml  README.md  build.rs
rd-util/src/: anon_area.rs  iocost.rs  journal_tailer.rs  json_file.rs  lib.rs  storage_info.rs  systemd.rs
resctl-bench/: Cargo.toml  README.md
resctl-bench-intf/: Cargo.toml  README.md
resctl-bench-intf/src/: args.rs  iocost.rs  jobspec.rs  lib.rs
resctl-bench/doc/: README.md  common.md  hashd-params.md  iocost-params.md  iocost-qos.md  iocost-tune.md  lambda.md  protection.md  shadow-inode.md  storage.md
resctl-bench/examples/: prot-iocost-off-on-format.txt  prot-iocost-off-on-summary.txt
resctl-bench/src/: base.rs  bench.rs  doc.rs  iocost.rs  job.rs  lambda.rs  main.rs  merge.rs  progress.rs  run.rs  study.rs
resctl-bench/src/bench/: hashd_params.rs  iocost_params.rs  iocost_qos.rs  iocost_tune.rs  merge_info.rs  protection.rs  storage.rs
resctl-bench/src/bench/iocost_tune/: graph.rs  merge.rs
resctl-bench/src/bench/protection/: mem_hog.rs  mem_hog_tune.rs
resctl-bench/src/doc/: README.md  common.md  hashd-params.md  hashd_params.md  iocost-params.md  iocost-qos.md  iocost-tune.md  iocost_params.md  iocost_qos.md  iocost_tune.md  protection.md  storage.md
resctl-bench/src/merge/: info.rs
resctl-bench/src/study/: iolat.rs  rstat.rs
resctl-demo/: Cargo.toml  README.md
resctl-demo/src/: agent.rs  command.rs  doc.rs  graph.rs  journal.rs  journal_tailer.rs  main.rs  report_ring.rs  status.rs
resctl-demo/src/doc/: comp.cgroup.cpu.rd  comp.cgroup.io.rd  comp.cgroup.mem.rd  comp.cgroup.mem.thrash.rd  comp.cgroup.memory.rd  comp.cgroup.rd  comp.oomd.rd  comp.psi.rd  credits.rd  doc-format.rd  index.rd  index.rs  intro.hashd.rd  intro.iocost.rd  intro.post-bench.rd  intro.pre-bench.rd  intro.rd  intro.second.rd  intro.sysreqs.rd  markup_rd.rs  prot.demo.rd  senpai.exp.rd  senpai.intro.rd  senpai.senpai.rd  side.details.rd  side.exp.rd  side.intro.rd  side.sideloader.rd  sysreqs.rd
util/: Cargo.toml  build.rs
util/src/: anon_area.rs  iocost.rs  journal_tailer.rs  json_file.rs  lib.rs  storage_info.rs  systemd.rs
