# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "rd-agent-intf"
version = "1.0.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rd-hashd-intf = { path = "../rd-hashd-intf" }

anyhow = "1.0.26"
clap = "2.33.0"
chrono = { version = "0.4.10", features = ["serde"] }
enum-iterator = "0.5.0"
lazy_static = "1.4.0"
libc = "^0.2"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
util = { path = "../util" }
