# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "rd-agent-intf"
version = "1.0.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facebookexperimental/resctl-demo"
description = "Management agent for resctl-demo (interface library)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rd-util = { path = "../rd-util" }
rd-hashd-intf = { path = "../rd-hashd-intf" }

anyhow = "^1.0"
clap = "^2.33"
chrono = { version = "^0.4", features = ["serde"] }
enum-iterator = "^0.6"
lazy_static = "^1.4"
libc = "^0.2"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
