# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "rd-agent"
version = "1.0.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rd-agent-intf = { path = "../rd-agent-intf" }
rd-hashd-intf = { path = "../rd-hashd-intf" }

anyhow = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
crossbeam = "^0.8"
enum-iterator = "^0.6"
glob = "^0.3"
json = "^0.12"
lazy_static = "^1.4"
libc = "^0.2"
linux_proc = "^0.1"
log = "^0.4"
nix = "^0.20"
procfs = "^0.9"
proc-mounts = "^0.2"
regex = "^1.4"
scan_fmt = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sysinfo = "^0.16"
users = "^0.11"
util = { path = "../util" }
