# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "rd-agent"
version = "2.2.6"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facebookexperimental/resctl-demo"
description = "Management agent for resctl-demo"
readme = "README.md"

[dependencies]
rd-util = { path = "../rd-util", version = "2.2.6" }
rd-hashd-intf = { path = "../rd-hashd-intf", version = "2.2.6" }
rd-agent-intf = { path = "../rd-agent-intf", version = "2.2.6" }

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
enum-iterator = "2.0"
glob = "0.3"
json = "0.12"
lazy_static = "1.4"
libc = "0.2"
linux_proc = "0.1"
log = "0.4"
nix = { version = "0.28", features = ["signal", "process"] }
procfs = "0.17"
proc-mounts = "0.3"
regex = "1.10"
scan_fmt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
uzers = "0.11"
