# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "rd-hashd-intf"
version = "0.1.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

chrono = { version = "0.4.10", features = ["serde"] }
clap = "2.33.0"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
