# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "rd-hashd-intf"
version = "1.0.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
util = { path = "../util" }

chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33"
lazy_static = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
