# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "rd-hashd"
version = "0.1.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

[dependencies]
rd-hashd-intf = { path = "../rd-hashd-intf" }

anyhow = "1.0.26"
chrono = { version = "0.4.10", features = ["serde"] }
crossbeam = "0.7.3"
env_logger = "0.7.1"
indicatif = "0.13.0"
libc = "0.2.66"
linreg = "0.2.0"
log = "0.4.8"
num = "0.2.1"
pid = "2.0.0"
quantiles = "0.7.1"
rand = { version = "0.7.2", features = ["small_rng"] }
rand_distr = "0.2.2"
sha1 = "0.6.0"
util = { path = "../util" }
