[package]
name = "rd-util"
version = "2.2.6"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facebookexperimental/resctl-demo"
description = "Utility collection library for resctl-demo"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2.33"
console = "0.15"
crossbeam = "0.8"
ctrlc = { version = "3.2", features = ["termination"] }
env_logger = "0.11"
glob = "0.3"
json = "0.12"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
num = "0.4"
num_cpus = "1.16"
page_size = "0.6"
proc-mounts = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
rustbus = "0.17"
scan_fmt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
sysinfo = "0.30"

[build-dependencies]
anyhow = "1.0"
vergen = "7.0"
