# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "resctl-bench-intf"
version = "1.0.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rd-agent-intf = { path = "../rd-agent-intf" }

anyhow = "^1.0"
clap = "^2.33"
lazy_static = "^1.4"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
util = { path = "../util" }
