# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "resctl-bench-intf"
version = "2.1.2"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facebookexperimental/resctl-demo"
description = "Whole system resource control benchmarks with realistic scenarios (interface library)"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
lambda = []

[dependencies]
rd-util = { path = "../rd-util", version = "^2.1" }
rd-agent-intf = { path = "../rd-agent-intf", version = "^2.1" }

anyhow = "^1.0"
clap = "^2.33"
lazy_static = "^1.4"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
