[package]
name = "resctl-bench"
version = "2.2.6"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facebookexperimental/resctl-demo"
description = "Whole system resource control benchmarks with realistic scenarios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lambda = ["resctl-bench-intf/lambda", "aws-config", "aws-sdk-s3", "aws-sdk-ssm", "octocrab", "lambda_runtime", "md5", "tokio"]

[dependencies]
rd-util = { path = "../rd-util", version = "2.2.6" }
rd-hashd-intf = { path = "../rd-hashd-intf", version = "2.2.6" }
rd-agent-intf = { path = "../rd-agent-intf", version = "2.2.6" }
resctl-bench-intf = { path = "../resctl-bench-intf", version = "2.2.6" }

# For the lambda feature. We prefer rustls for all the crates we use to avoid incompatibilities.
aws-config = { version = "0.55.3", optional = true, features = ["rustls", "rt-tokio"], default-features = false  }
aws-sdk-s3 = { version = "0.28.0", optional = true, features = ["rustls", "rt-tokio"], default-features = false  }
aws-sdk-ssm = { version = "0.28.0", optional = true, features = ["rustls", "rt-tokio"], default-features = false  }
aws_lambda_events = "0.10.0"

jsonwebtoken = "8.3.0"
lambda_runtime = { version = "0.8.1", optional = true  }
md5 = { version = "0.7", optional = true  }
octocrab = { version = "0.28.0", optional = true, features = ["rustls"], default-features = false }
tokio = { version = "1.29.1", optional = true }

anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
console = "0.15"
env_logger = "0.11"
indicatif = "0.17"
lazy_static = "1.4"
libc = "0.2"
libflate = "2.0"
linreg = "0.2"
log = "0.4"
minreq = { version= "2.11", features = ["https-rustls", "json-using-serde"] }
num-traits = "0.2"
plotlib = "0.5"
quantiles = "0.7"
rand = "0.8"
scan_fmt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statistical = "1.0"
statrs = "0.16"
sysinfo = "0.30"
tar = "0.4"
tempfile = "3.10"
term_size = "0.3"
thiserror = "1.0"
