[package]
name = "resctl-demo"
version = "0.1.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rd-agent-intf = { path = "../rd-agent-intf" }
rd-hashd-intf = { path = "../rd-hashd-intf" }

anyhow = "1.0.26"
chrono = { version = "0.4.10", features = ["serde"] }
clap = "2.33.0"
crossbeam = "0.7.3"
cursive = "0.14.0"
enum-iterator = "0.5.0"
env_logger = "0.7.1"
json = "0.12.1"
lazy_static = "1.4.0"
libc = "0.2.66"
log = "0.4.8"
tempfile = "3.1.0"
util = { path = "../util" }
