# Copyright (c) Facebook, Inc. and its affiliates
[package]
name = "resctl-demo"
version = "1.0.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rd-agent-intf = { path = "../rd-agent-intf" }
rd-hashd-intf = { path = "../rd-hashd-intf" }

anyhow = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33"
crossbeam = "^0.8"
cursive = "^0.15"
cursive-tabs = "^0.5"
enum-iterator = "^0.6"
env_logger = "^0.8"
lazy_static = "^1.4"
libc = "^0.2"
log = "^0.4"
tempfile = "^3.1"
util = { path = "../util" }
