[package]
name = "util"
version = "1.0.0"
authors = ["Tejun Heo <tj@kernel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
clap = "2.33.0"
crossbeam = "0.7.3"
ctrlc = { version = "3.1.3", features = ["termination"] }
env_logger = "0.7.1"
glob = "0.3.0"
json = "^0.12"
lazy_static = "1.4.0"
libc = "0.2.66"
log = "0.4.8"
num = "0.2.1"
num_cpus = "1.11.1"
page_size = "0.4.2"
proc-mounts = "0.2.3"
rand = { version = "0.7.2", features = ["small_rng"] }
rustbus = "^0.9"
scan_fmt = "0.2.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
simplelog = "0.7.4"
sysinfo = "0.10.4"
